# Issue-Tracker

./: .gitignore  README.md  notes.txt
Back End/: .gitignore  .python-version  main.py  requirements.txt
Back End/src/api/: main.py  utils.py  webhooks.py
Back End/src/bot/: info.py  main.py
Front End/: package-lock.json  package.json
Front End/public/: index.html
Front End/src/: App.css  App.js
Front End/src/Pages/Issue/: issue.component.jsx
Front End/src/SubmissionForm/: form.component.jsx
Front End/src/db/: db.js
Front End/src/server/: routes.js  server.js
Front End/src/utils/: index.js
backend/: pyproject.toml  requirements.txt  vercel.json
backend/src/ticketing_system/api/: app.py  index.py  main.py  utils.py  webhooks.py
backend/src/ticketing_system/api/embeds/: mod_help.md
backend/src/ticketing_system/api/routes/: issue.py  project.py  user.py
backend/src/ticketing_system/bot/: main.py  tram_copypasta.md
backend/src/ticketing_system/bot/cogs/: create_project.py
backend/src/ticketing_system/bot/issue_project/: cog.py  modals.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/Header/: header.component.jsx
frontend/src/Items/Cards/: card.component.jsx  issueCard.component.jsx  projectCard.component.jsx
frontend/src/Pages/IssueList/: issueList.component.jsx
frontend/src/Pages/ProjectList/: projectList.component.jsx
frontend/src/SubmissionForm/: form.component.jsx
frontend/src/context/: authprovider.component.jsx
(+2 files in other folders)
